--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container-fluid">
         <!-- Navbar brand -->
         <a class="navbar-brand" target="_blank" href="">
-          <img src="img/logo1.png" height="55" alt="" loading="lazy"
+          <img src="tekklyncomingsoon/img/logo1.png" height="55" alt="" loading="lazy"
             style="margin-top: -3px;" />
         </a>
         <button class="navbar-toggler" type="button" data-mdb-collapse-init data-mdb-target="#navbarExample01"
